gitops/apps/keycloak/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
      - keycloak.local
  - port:
      number: 443
      name: https
      protocol: TLS
    tls:
      mode: PASSTHROUGH
    hosts:
    - keycloak.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
spec:
  hosts:
  - keycloak.local
  gateways:
  - keycloak
  tls:
  - match:
    - port: 443
      sniHosts:
      - keycloak.local
    route:
    - destination:
        host: keycloak-service
        port:
          number: 8443
